alternative way of fixing white space

--- a/WebContent/inc/css/style.css
+++ b/WebContent/inc/css/style.css
@@ -404,7 +404,7 @@ section {
     -ms-background-size: cover;
     background-size: cover;
     position: relative;
-    z-index: 1;
+    
 }
 
 .banner:after,
